--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,54 @@
 
+@Article{	  diessel2020,
+  author	= {Diessel, H and Coventry, KR},
+  journal	= {Front Psychol},
+  title		= {Demonstratives in Spatial Language and Social Interaction:
+		  An Interdisciplinary Review.},
+  volume	= {11},
+  year		= {2020}
+}
+
+@Article{	  ceolin2020history,
+  author	= {Ceolin, Andrea and Guardiano, Cristina and Irimia, Monica
+		  Alexandrina and Longobardi, Giuseppe},
+  journal	= {Frontiers in Psychology},
+  title		= {Formal Syntax and Deep History},
+  volume	= {11},
+  year		= {2020}
+}
+
+@Article{	  aboh2020,
+  author	= {Aboh, EO},
+  journal	= {Front Psychol},
+  pages		= {488},
+  title		= {Lessons From Neuro-(a)-Typical Brains: Universal
+		  Multilingualism, Code-Mixing, Recombination, and Executive
+		  Functions.},
+  volume	= {11},
+  year		= {2020}
+}
+
+@Article{	  tanaka2019,
+  author	= {Tanaka, K and Nakamura, I and Ohta, S and Fukui, N and
+		  Zushi, M and Narita, H and Sakai, KL},
+  journal	= {Front Psychol},
+  pages		= {2673},
+  title		= {Merge-Generability as the Key Concept of Human Language:
+		  Evidence From Neuroscience.},
+  volume	= {10},
+  year		= {2019}
+}
+
+@Article{	  miyagawa2019,
+  author	= {Miyagawa, S and Clarke, E},
+  journal	= {Front Psychol},
+  pages		= {1911},
+  title		= {Systems Underlying Human and Old World Monkey
+		  Communication: One, Two, or Infinite.},
+  volume	= {10},
+  year		= {2019}
+}
+
 @Article{	  bruening2020implicit,
   author	= {Bruening, Benjamin},
   journal	= {Natural Language \& Linguistic Theory},
