--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,50 @@
 
+@Book{		  fiengo2006belief,
+  address	= {Cambridge, Mass.},
+  author	= {Fiengo, Robert and May, Robert},
+  pages		= {viii, 179},
+  publisher	= {MIT Press},
+  title		= {De lingua belief},
+  year		= {2006}
+}
+
+@Book{		  fiengo1994indices,
+  address	= {Cambridge, Mass.},
+  author	= {Fiengo, Robert and May, Robert},
+  pages		= {xvii, 315},
+  publisher	= {MIT Press},
+  title		= {Indices and identity},
+  volume	= {Linguistic inquiry monographs; 24},
+  year		= {1994}
+}
+
+@Book{		  may1985logical,
+  address	= {Cambridge, Mass.},
+  author	= {May, Robert},
+  publisher	= {MIT Press},
+  title		= {Logical form: its structure and derivation},
+  year		= {1985}
+}
+
+@Book{		  abe2017minimalist,
+  address	= {Dordercht},
+  author	= {Abe, Jun},
+  publisher	= {Springer International Publishing},
+  title		= {Minimalist Syntax for Quantifier Raising, Topicalization
+		  and Focus Movement: A Search and Float Approach for
+		  Internal Merge},
+  year		= {2017}
+}
+
+@Book{		  hendrick2003minimalist,
+  address	= {Malden, MA},
+  editor	= {Hendrick, Randall},
+  pages		= {233},
+  publisher	= {Blackwell Pub.},
+  title		= {Minimalist syntax},
+  year		= {2003}
+}
+
 @Article{	  diessel2020,
   author	= {Diessel, H and Coventry, KR},
   journal	= {Front Psychol},
