--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@Article{Tomioka2014Embedded-wa-phrases-,
+author = {Tomioka, Satoshi}, 
+title = {Embedded wa-phrases, predication, and judgment theory}, 
+journal = {Natural Language \& Linguistic Theory}, 
+volume = {}, 
+number = {}, 
+pages = {1–39}, 
+year = {2014}, 
+location = {}, 
+keywords = {Predicate abstraction; predication; Relative clauses; Thetic/categorical judgment; Topic; copula}}
+
+
+
 @Book{Garcia-Pardo2020Stative,
 author = {García-Pardo, Alfredo}, 
 title = {Stative Inquiries: Causes, results, experiences, and locations}, 
