--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,41 @@
+@phdthesis{Bender2001Copula,
+author = {Bender, Emily M.}, 
+title = {Syntactic variation and linguistic competence: The case of AAVE copula absence}, 
+school = {Standford University}, 
+address = {}, 
+pages = {328}, 
+year = {2001}, 
+keywords = {African-American Vernacular English; Copula absence; Linguistic competence; Syntactic variation; Copulative}}
+
+
+
+@Book{Young2017Aesthetic,
+author = {}, 
+title = {The Semantics of Aesthetic Judgements}, 
+volume = {}, 
+pages = {240}, 
+editor = {Young, James O.}, 
+publisher = {Oxford University Press}, 
+address = {}, 
+year = {2017}, 
+abstract = {}, 
+keywords = {}}
+
+
+
+@Book{McNally2017Aesthetic,
+author = {McNally, Louise and Stojanovic, Isidora}, 
+title = {Aesthetic Adjectives}, 
+volume = {The Semantics of Aesthetic Judgements}, 
+pages = {240}, 
+editor = {Young, James O.}, 
+publisher = {Oxford University Press}, 
+address = {}, 
+year = {2017}, 
+abstract = {}, 
+keywords = {Judge semantics; Aesthetic adjectives; Copula; Copulative; Predicative}}
+
+
 @Article{Tomioka2014Embedded-wa-phrases-,
 author = {Tomioka, Satoshi}, 
 title = {Embedded wa-phrases, predication, and judgment theory}, 
