--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,31 @@
 
+@PhDThesis{	  bender2001copula,
+  author	= {Bender, Emily M.},
+  pages		= {328},
+  school	= {Standford University},
+  title		= {Syntactic variation and linguistic competence: The case of
+		  AAVE copula absence},
+  year		= {2001}
+}
+
+@Book{		  young2017aesthetic,
+  editor	= {Young, James O.},
+  pages		= {240},
+  publisher	= {Oxford University Press},
+  title		= {The Semantics of Aesthetic Judgements},
+  year		= {2017}
+}
+
+@Book{		  mcnally2017aesthetic,
+  author	= {McNally, Louise and Stojanovic, Isidora},
+  editor	= {Young, James O.},
+  pages		= {240},
+  publisher	= {Oxford University Press},
+  title		= {Aesthetic Adjectives},
+  volume	= {The Semantics of Aesthetic Judgements},
+  year		= {2017}
+}
+
 @Book{		  fiengo2006belief,
   address	= {Cambridge, Mass.},
   author	= {Fiengo, Robert and May, Robert},
