--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@PhDThesis{	  staum2009sociolinguistics,
+  author	= {Staum, Laura},
+  pages		= {198},
+  school	= {Standford University},
+  title		= {Experimental investigations of sociolinguistic knowledge},
+  year		= {2009}
+}
+
 @PhDThesis{	  bender2001copula,
   author	= {Bender, Emily M.},
   pages		= {328},
