--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,87 @@
 
+@Article{	  gribanova2020predicate,
+  author	= {Gribanova, Vera},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {124},
+  title		= {Predicate formation and verb-stranding ellipsis in Uzbek},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Article{	  morzycki2011galore,
+  author	= {Morzycki, Marcin},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {671--682},
+  title		= {Quantification Galore},
+  volume	= {42},
+  year		= {2011}
+}
+
+@Article{	  roelofsen2011variable,
+  author	= {Roelofsen, Floris},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {682--697},
+  title		= {Free Variable Economy},
+  volume	= {42},
+  year		= {2011}
+}
+
+@Article{	  shlonsky2011why,
+  author	= {Shlonsky, Ur and Soare, Gabriela},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {651--669},
+  title		= {Where's `Why'},
+  volume	= {42},
+  year		= {2011}
+}
+
+@Article{	  donati2011rel,
+  author	= {Donati, Caterina and Cecchetto, Carlo},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {519--560},
+  title		= {Relabeling Heads: A Unified Account for Relativization
+		  Structures},
+  volume	= {42},
+  year		= {2011}
+}
+
+@Article{	  iatridou2011negative,
+  author	= {Iatridou, Sabine and Sichel, Ivy},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {595--629},
+  title		= {Negative DPs, A-Movement, and Scope Diminishment},
+  volume	= {42},
+  year		= {2011}
+}
+
+@Article{	  woolard1994ideology,
+  author	= {Woolard, Kathryn A. and Schieffelin, Bambi B.},
+  journal	= {Annual Review of Anthropology},
+  number	= {1},
+  pages		= {55--82},
+  title		= {Language Ideology},
+  volume	= {23},
+  year		= {1994}
+}
+
+@Article{	  wiltschko2018variation,
+  author	= {Wiltschko, Martina and Denis, Derek and D›Arcy,
+		  Alexandra},
+  journal	= {Language in Society},
+  number	= {4},
+  pages		= {569--599},
+  title		= {Deconstructing variation in pragmatic function: A
+		  transdisciplinary case study},
+  volume	= {47},
+  year		= {2018}
+}
+
 @PhDThesis{	  staum2009sociolinguistics,
   author	= {Staum, Laura},
   pages		= {198},
