--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,36 @@
 
+@Article{	  fritz-huechante2020agentitivity,
+  author	= {Fritz-Huechante, Paola and Verhoeven, Elisabeth and Rott,
+		  Julian A.},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {128},
+  title		= {Agentivity and non-culminating causation in the psych
+		  domain: Cross-linguistic evidence from Spanish and Korean},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Article{	  sudo2020gender,
+  author	= {Sudo, Yasutada and Spathas, Giorgos},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Gender and interpretation in Greek: Comments on Merchant
+		  (2014)},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Article{	  saab2020se,
+  author	= {Saab, Andr{\'e}s},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Deconstructing Voice. The syntax and semantics of
+		  u-syncretism in Spanish},
+  volume	= {5},
+  year		= {2020}
+}
+
 @Article{	  gribanova2020predicate,
   author	= {Gribanova, Vera},
   journal	= {Glossa: a journal of general linguistics},
