--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,51 @@
 
+@Article{	  roehrs2020proper,
+  author	= {Roehrs, Dorian},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {The morpho-syntax of phrasal proper names in German},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Article{	  haddad2020vocative,
+  author	= {Haddad, Youssef A.},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Vocatives as parenthetical adjuncts: Evidence from
+		  Arabic},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Article{	  crain2010instinct,
+  author	= {Crain, Stephen and Khlentzos, Drew},
+  journal	= {Mind and Language},
+  number	= {1},
+  pages		= {30--65},
+  title		= {The Logic Instinct},
+  volume	= {25},
+  year		= {2010}
+}
+
+@InBook{	  sep-scientific-objectivity,
+  author	= {Reiss, Julian and Sprenger, Jan},
+  booktitle	= {The Stanford Encyclopedia of Philosophy},
+  editor	= {Edward, N. Zalta},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Scientific Objectivity},
+  year		= {2020}
+}
+
+@InBook{	  sep-scientific-knowledge-social,
+  author	= {Longino, Helen},
+  booktitle	= {The Stanford Encyclopedia of Philosophy},
+  editor	= {Edward, N. Zalta},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {The Social Dimensions of Scientific Knowledge},
+  year		= {2019}
+}
+
 @Article{	  fritz-huechante2020agentitivity,
   author	= {Fritz-Huechante, Paola and Verhoeven, Elisabeth and Rott,
 		  Julian A.},
