--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@InCollection{	  sep-naturalism,
+  author	= {Papineau, David},
+  booktitle	= {The Stanford Encyclopedia of Philosophy},
+  editor	= {Zalta, Edward N.},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Naturalism},
+  year		= {2020}
+}
+
 @Article{	  roehrs2020proper,
   author	= {Roehrs, Dorian},
   journal	= {Glossa: a journal of general linguistics},
