--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Article{	  crain2006change,
+  author	= {Crain, Stephen and Goro, TAkuya and Thornton, Rosalind},
+  journal	= {J Psycholinguist Res},
+  number	= {1},
+  pages		= {31--49},
+  title		= {Language acquisition is language change.},
+  volume	= {35},
+  year		= {2006}
+}
+
+@Article{	  crain2001nature,
+  author	= {Crain, Stephen and Pietroski, Paul},
+  journal	= {Linguistics and Philosophy},
+  number	= {2},
+  pages		= {139--186},
+  title		= {Nature, Nurture And Universal Grammar},
+  volume	= {24},
+  year		= {2001}
+}
+
+@InBook{	  pietroski2012faculty,
+  author	= {Pietroski, Paul and Crain, Stephen},
+  booktitle	= {The Oxford Handbook of Philosophy of Cognitive Science},
+  editor	= {Margolis, Eric and Samuels, Richard and Stich, Stephen
+		  P.},
+  publisher	= {Oxford University Press},
+  title		= {The Language Faculty},
+  year		= {2012}
+}
+
 @InCollection{	  sep-naturalism,
   author	= {Papineau, David},
   booktitle	= {The Stanford Encyclopedia of Philosophy},
