--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  angelopoulos2021clitics,
+  author	= {Angelopoulos, Nikos and Sportiche, Dominique},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Clitic dislocations and clitics in French and Greek},
+  year		= {2021}
+}
+
 @Article{	  crain2006change,
   author	= {Crain, Stephen and Goro, TAkuya and Thornton, Rosalind},
   journal	= {J Psycholinguist Res},
