--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,29 @@
 
+@InBook{	  partee2004binding,
+  author	= {Partee, Barbara H.},
+  booktitle	= {Compositionality in Formal Semantics},
+  publisher	= {Wiley-Blackwell},
+  title		= {Binding Implicit Variables in Quantified Contexts},
+  year		= {2004}
+}
+
+@Book{		  partee2004compositionality,
+  author	= {Partee, Barbara H.},
+  pages		= {348},
+  publisher	= {Wiley-Blackwell},
+  title		= {Compositionality in Formal Semantics},
+  year		= {2004}
+}
+
+@InBook{	  partee2008ambiguouspseudocleftsunambiguous,
+  author	= {Partee, Barbara H.},
+  booktitle	= {Compositionality in Formal Semantics},
+  pages		= {190-202},
+  publisher	= {John Wiley \& Sons},
+  title		= {Ambiguous Pseudoclefts with Unambiguous Be},
+  year		= {2008}
+}
+
 @Article{	  angelopoulos2021clitics,
   author	= {Angelopoulos, Nikos and Sportiche, Dominique},
   journal	= {Natural Language \& Linguistic Theory},
