--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Book{		  pietroski2018conjoining,
+  author	= {Pietroski, Paul M.},
+  pages		= {416},
+  publisher	= {Oxford University Press},
+  title		= {Conjoining Meanings},
+  year		= {2018}
+}
+
+@Book{		  macfarlane2014sensitivity,
+  author	= {MacFarlane, John},
+  pages		= {344},
+  publisher	= {Oxford University Press, USA},
+  title		= {Assessment Sensitivity},
+  year		= {2014}
+}
+
 @InBook{	  partee2004binding,
   author	= {Partee, Barbara H.},
   booktitle	= {Compositionality in Formal Semantics},
