--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,101 @@
 
+@Article{	  korotkova2021evidentials,
+  author	= {Korotkova, Natasha},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {210--226},
+  title		= {The Embedding Puzzle: Constraints on Evidentials in
+		  Complement Clauses},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  kimura2021wh,
+  author	= {Kimura, Hiroko and Narita, Hiroki},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {195--209},
+  title		= {Compound Wh-Questions and Fragment Answers in Japanese:
+		  Implications for the Nature of Ellipsis},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  barany2021possessor,
+  author	= {B{\'a}r{\'a}ny, Andr{\'a}s and Nikolaeva, Irina},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {181--194},
+  title		= {On Adjoined Possessors},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  yuan2021clitics,
+  author	= {Yuan, Michelle},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {153--179},
+  title		= {Diagnosing Object Agreement vs. Clitic Doubling: An Inuit
+		  Case Study},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  ershova2021clause,
+  author	= {Ershova, Ksenia},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {1--38},
+  title		= {Diagnosing Clause Structure in a Polysynthetic Language:
+		  Wh-Agreement and Parasitic Gaps in West Circassian},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  iatridou2021until,
+  author	= {Iatridou, Sabine and Zeijlstra, Hedde},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {89--142},
+  title		= {The Complex Beauty of Boundary Adverbials: In Years and
+		  Until},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  hsu2021coalescence,
+  author	= {Hsu, Brian},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {39--87},
+  title		= {Coalescence: A Unification of Bundling Operations in
+		  Syntax},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  simon1997closure,
+  author	= {Charlow, Simon},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {143--152},
+  title		= {{$\exists$}-Closure and Alternatives},
+  volume	= {52},
+  year		= {2021}
+}
+
+@Article{	  martin2021vowel,
+  author	= {Martin, Alexander and White, James},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {227--239},
+  title		= {Vowel Harmony and Disharmony Are Not Equivalent in
+		  Learning},
+  volume	= {52},
+  year		= {2021}
+}
+
 @Book{		  pietroski2018conjoining,
   author	= {Pietroski, Paul M.},
   pages		= {416},
