--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,30 @@
+@Incollection{Umbach2020Evaluative,
+author = {Umbach, Carla}, 
+title = {Evaluative Predicates}, 
+booktitle = {The Wiley Blackwell Companion to Semantics}, 
+editor = {Meier, Cécile and Rullmann, Hotze and Zimmermann, Thomas Ede}, 
+publisher = {John, Wiley and Sons}, 
+address = {}, 
+pages = {1-31}, 
+year = {2020}, 
+abstract = {}, 
+keywords = {Evaluative; Adjectives; Taste; Copula}}
+
+
+@Incollection{Heycock2020Copular,
+author = {Heycock, Caroline}, 
+title = {Copular Sentences}, 
+booktitle = {The Wiley Blackwell Companion to Semantics}, 
+editor = {Meier, Cécile and Rullmann, Hotze and Zimmermann, Thomas Ede}, 
+publisher = {John, Wiley and Sons}, 
+address = {}, 
+pages = {1-40}, 
+year = {2020}, 
+abstract = {}, 
+keywords = {copula; copulative}}
+
+
+
 @phdthesis{Bender2001Copula,
 author = {Bender, Emily M.}, 
 title = {Syntactic variation and linguistic competence: The case of AAVE copula absence}, 
