--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,92 @@
 
+@InCollection{	  heycock2020copular,
+  author	= {Heycock, Caroline},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Meier, C{\'e}cile and Rullmann, Hotze and Zimmermann,
+		  Thomas Ede},
+  pages		= {1-40},
+  publisher	= {John, Wiley and Sons},
+  title		= {Copular Sentences},
+  year		= {2020}
+}
+
+@InCollection{	  umbach2020evaluative,
+  author	= {Umbach, Carla},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Meier, C{\'e}cile and Rullmann, Hotze and Zimmermann,
+		  Thomas Ede},
+  pages		= {1-31},
+  publisher	= {John, Wiley and Sons},
+  title		= {Evaluative Predicates},
+  year		= {2020}
+}
+
+@InCollection{	  murray2020evidentiality,
+  author	= {Murray, Sarah E.},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Meier, C{\'e}cile and Rullmann, Hotze and Zimmermann,
+		  Thomas Ede},
+  pages		= {1-31},
+  publisher	= {John, Wiley and SonsWiley},
+  title		= {Evidentials},
+  year		= {2020}
+}
+
+@InCollection{	  gutzmann2020dimensions,
+  author	= {Gutzmann, Daniel},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Meier, C{\'e}cile and Rullmann, Hotze and Zimmermann,
+		  Thomas Ede},
+  pages		= {1-29},
+  publisher	= {John, Wiley and SonsWiley},
+  title		= {Dimensions of Meaning},
+  year		= {2020}
+}
+
+@InCollection{	  sassoon2020family,
+  author	= {Sassoon, Galit W.},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Meier, C{\'e}cile and Rullmann, Hotze and Zimmermann,
+		  Thomas Ede},
+  pages		= {1-31},
+  publisher	= {John, Wiley and SonsWiley},
+  title		= {Family Resemblance and Prototypes},
+  year		= {2020}
+}
+
+@InCollection{	  morzycki2020degree,
+  author	= {Morzycki, Marcin},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Meier, C{\'e}cile and Rullmann, Hotze and Zimmermann,
+		  Thomas Ede},
+  pages		= {1-32},
+  publisher	= {John, Wiley and SonsWiley},
+  title		= {Gradable Adjectives and Degree Expressions},
+  year		= {2020}
+}
+
+@InCollection{	  elbourne2020enriched,
+  author	= {Elbourne, Paul},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Meier, C{\'e}cile and Rullmann, Hotze and Zimmermann,
+		  Thomas Ede},
+  pages		= {1-37},
+  publisher	= {John, Wiley and SonsWiley},
+  title		= {Literal vs Enriched Meaning},
+  year		= {2020}
+}
+
+@InCollection{	  burnett2020vagueness,
+  author	= {Burnett, Heather and Sutton, Peter R.},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Meier, C{\'e}cile and Rullmann, Hotze and Zimmermann,
+		  Thomas Ede},
+  pages		= {1-34},
+  publisher	= {John, Wiley and SonsWiley},
+  title		= {Vagueness and Natural Language Semantics},
+  year		= {2020}
+}
+
 @Article{	  korotkova2021evidentials,
   author	= {Korotkova, Natasha},
   journal	= {Linguistic Inquiry},
