--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,69 @@
 
+@Article{	  beltrama2017totally,
+  author	= {Beltrama, Andrea and Staum Casasanto, Laura},
+  journal	= {Journal of Sociolinguistics},
+  number	= {2},
+  pages		= {154--182},
+  title		= {Totally tall sounds totally younger: Intensification at
+		  the socio‐semantics interface},
+  volume	= {21},
+  year		= {2017}
+}
+
+@Article{	  beltrama2019emphasis,
+  author	= {Beltrama, Andrea and Trotzke, Andreas},
+  journal	= {Language and Linguistics Compass},
+  number	= {7},
+  title		= {Conveying emphasis for intensity: Lexical and syntactic
+		  strategies},
+  volume	= {13},
+  year		= {2019}
+}
+
+@Article{	  beltrama2018,
+  author	= {Beltrama, Andrea},
+  journal	= {Linguistics Vanguard},
+  number	= {1},
+  title		= {Precision and speaker qualities. The social meaning of
+		  pragmatic detail},
+  volume	= {4},
+  year		= {2018}
+}
+
+@Article{	  eckert1992gender,
+  author	= {Eckert, Penelope and McConnell-Ginet, Sally},
+  journal	= {Annual Review of Anthropology},
+  number	= {1},
+  pages		= {461--488},
+  title		= {Think Practically and Look Locally: Language and Gender as
+		  Community-Based Practice},
+  volume	= {21},
+  year		= {1992}
+}
+
+@Article{	  burnett2019gender,
+  author	= {Burnett, Heather and Bonami, Olivier},
+  journal	= {Language in Society},
+  number	= {1},
+  pages		= {65--93},
+  title		= {Linguistic prescription, ideological structure, and the
+		  actuation of linguistic changes: Grammatical gender in
+		  French parliamentary debates},
+  volume	= {48},
+  year		= {2019}
+}
+
+@Article{	  eckert2019social,
+  author	= {Eckert, Penelope},
+  journal	= {Language},
+  number	= {4},
+  pages		= {751--776},
+  title		= {The limits of meaning: Social indexicality, variation, and
+		  the cline of interiority},
+  volume	= {95},
+  year		= {2019}
+}
+
 @InCollection{	  heycock2020copular,
   author	= {Heycock, Caroline},
   booktitle	= {The Wiley Blackwell Companion to Semantics},
