--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Article{	  elbourne2021definite,
+  author	= {Elbourne, Paul},
+  journal	= {Linguistics and Philosophy},
+  title		= {Presupposition, assertion, and definite descriptions},
+  year		= {2021}
+}
+
+@Article{	  carlson1977amount,
+  author	= {Carlson, Greg N.},
+  journal	= {Language},
+  number	= {3},
+  pages		= {520},
+  title		= {Amount Relatives},
+  volume	= {53},
+  year		= {1977}
+}
+
 @Article{	  beltrama2017totally,
   author	= {Beltrama, Andrea and Staum Casasanto, Laura},
   journal	= {Journal of Sociolinguistics},
@@ -20,7 +37,7 @@
   year		= {2019}
 }
 
-@Article{	  beltrama2018,
+@Article{	  beltrama2018precision,
   author	= {Beltrama, Andrea},
   journal	= {Linguistics Vanguard},
   number	= {1},
