--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -11975,7 +11975,7 @@
 }
 
 @Article{	  elbourne2009bishop-sentences-and,
-  author	= {Elbourne, Paul David},
+  author	= {Elbourne, Paul},
   journal	= {Semantics and Pragmatics},
   number	= {0},
   pages		= {1:1--7},
@@ -33970,7 +33970,7 @@
 
 @Book{		  elbourne2013definite-description,
   address	= {Oxford},
-  author	= {Elbourne, Paul D.},
+  author	= {Elbourne, Paul},
   edition	= {First edition},
   number	= {1},
   publisher	= {Oxford University Press},
