--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -22193,7 +22193,7 @@
 }
 
 @Article{	  elbourne2008the-interpretation-o,
-  author	= {Elbourne,Paul D.},
+  author	= {Elbourne, Paul},
   journal	= {Language and Linguistics Compass},
   number	= {1},
   pages		= {119--150},
