--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@InCollection{	  poesio2020ambiguity,
+  author	= {Poesio, Massimo},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Meier, C{\'e}cile and Zimmermann, Thomas Ede and Rullmann,
+		  Hotze},
+  pages		= {1-38},
+  publisher	= {John, Wiley and Sons},
+  title		= {Ambiguity},
+  year		= {2020}
+}
+
 @Article{	  elbourne2021definite,
   author	= {Elbourne, Paul},
   journal	= {Linguistics and Philosophy},
