--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  chomsky1961,
+  author	= {Chomsky, Noam},
+  journal	= {Word},
+  number	= {2},
+  pages		= {219--239},
+  title		= {Some Methodological Remarks on Generative Grammar},
+  volume	= {17},
+  year		= {1961}
+}
+
 @InCollection{	  poesio2020ambiguity,
   author	= {Poesio, Massimo},
   booktitle	= {The Wiley Blackwell Companion to Semantics},
