--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  leivada2021generalizations,
+  author	= {Leivada, Evelina},
+  journal	= {Zeitschrift f{\"u}r Sprachwissenschaft},
+  number	= {3},
+  pages		= {357--374},
+  title		= {Mid-level generalizations of generative linguistics:
+		  Experimental robustness, cognitive underpinnings and the
+		  interdisciplinarity paradox},
+  volume	= {39},
+  year		= {2021}
+}
+
 @Article{	  chomsky1961,
   author	= {Chomsky, Noam},
   journal	= {Word},
