--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Proceedings{	  bender2021stochasticparrots,
+  address	= {New York, NY, USA},
+  author	= {Bender, Emily M. and Gebru, Timnit and McMillan-Major,
+		  Angela and Shmitchell, Shmargaret},
+  booktitle	= {On the Dangers of Stochastic Parrots: Can Language Models
+		  Be Too Big?},
+  publisher	= {ACM Press},
+  title		= {On the Dangers of Stochastic Parrots: Can Language Models
+		  Be Too Big?},
+  year		= {2021}
+}
+
 @Article{	  leivada2021generalizations,
   author	= {Leivada, Evelina},
   journal	= {Zeitschrift f{\"u}r Sprachwissenschaft},
@@ -11,7 +23,7 @@
   year		= {2021}
 }
 
-@Article{	  chomsky1961,
+@Article{	  chomsky1961methodological,
   author	= {Chomsky, Noam},
   journal	= {Word},
   number	= {2},
