--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Article{	  lin2021distributional,
+  author	= {Lin, Jing and Weerman, Fred and Zeijlstra, Hedde},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Distributionally restricted items},
+  year		= {2021}
+}
+
+@Article{	  lovestrand2021serial,
+  author	= {Lovestrand, Joseph},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {109--130},
+  title		= {Serial Verb Constructions},
+  volume	= {7},
+  year		= {2021}
+}
+
 @Proceedings{	  bender2021stochasticparrots,
   address	= {New York, NY, USA},
   author	= {Bender, Emily M. and Gebru, Timnit and McMillan-Major,
