--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  pasternak2021cyclic,
+  author	= {Pasternak, Robert and Graf, Thomas},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {8},
+  title		= {Cyclic scope and processing difficulty in a Minimalist
+		  parser},
+  volume	= {6},
+  year		= {2021}
+}
+
 @Article{	  lin2021distributional,
   author	= {Lin, Jing and Weerman, Fred and Zeijlstra, Hedde},
   journal	= {Natural Language \& Linguistic Theory},
