--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,18 @@
 
+@InBook{	  bosque2019composicional,
+  address	= {Berlin, Boston},
+  author	= {Bosque, Ignacio},
+  booktitle	= {Clases y categor{\'i}as en la sem{\'a}ntica del
+		  espa{\~n}ol y sus interfaces},
+  editor	= {Garc{\'i}a Padr{\'o}n, Dolores and Hern{\'a}ndez Arocha,
+		  H{\'e}ctor and Sinner, Carsten},
+  pages		= {11-46},
+  publisher	= {De Gruyter},
+  title		= {Sobre la naturaleza composicional de las unidades
+		  gramaticales},
+  year		= {2019}
+}
+
 @Article{	  pasternak2021cyclic,
   author	= {Pasternak, Robert and Graf, Thomas},
   journal	= {Glossa: a journal of general linguistics},
