--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@Article{	  mcnally1992vp,
+  author	= {McNally, Louise},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {336--341},
+  title		= {VP Coordination and the VP-Internal Subject Hypothesis},
+  volume	= {23},
+  year		= {1992}
+}
+
+@Article{	  mcnally2008only,
+  author	= {McNally, Louise},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {161--169},
+  title		= {DP-Internal Only, Amount Relatives, and Relatives out of
+		  Existentials},
+  volume	= {28},
+  year		= {2008}
+}
+
+@Article{	  mcnally1993coordination,
+  author	= {McNally, Louise},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {2},
+  pages		= {347--379},
+  title		= {Comitative Coordination: A Case Study in Group Formation},
+  volume	= {11},
+  year		= {1993}
+}
+
 @InBook{	  bosque2019composicional,
   address	= {Berlin, Boston},
   author	= {Bosque, Ignacio},
