--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  newman2021temporal,
+  author	= {Newman, Elise},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {12},
+  title		= {On the interpretation of tense in temporal adverbial
+		  clauses},
+  volume	= {6},
+  year		= {2021}
+}
+
 @Article{	  mcnally1992vp,
   author	= {McNally, Louise},
   journal	= {Linguistic Inquiry},
