--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  drummond2021ruleh,
+  author	= {Drummond, Alex},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {13},
+  title		= {Remarks on Rule H},
+  volume	= {6},
+  year		= {2021}
+}
+
+@PhDThesis{	  vela2020inequality,
+  author	= {Vela Plo, Laura},
+  school	= {UPV/EHU},
+  title		= {Drawing Comparisons: a syntactic and semantic approach to
+		  Basque, Spanish and English inequality comparative
+		  structures},
+  year		= {2020}
+}
+
 @Article{	  newman2021temporal,
   author	= {Newman, Elise},
   journal	= {Glossa: a journal of general linguistics},
