--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  rizzi1982issues,
+  author	= {Rizzi, Luigi},
+  pages		= {188},
+  publisher	= {Walter de Gruyter},
+  title		= {Issues in Italian Syntax},
+  year		= {1982}
+}
+
 @Article{	  drummond2021ruleh,
   author	= {Drummond, Alex},
   journal	= {Glossa: a journal of general linguistics},
