result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,14 @@
+@phdthesis{Hashimoto2015Experiencing-in,
+author = {Hashimoto, Masashi}, 
+title = {Experiencing in Japanese: The Experiencer Restriction across Clausal Types}, 
+school = {University of Massachusetts}, 
+address = {Amherst, MA}, 
+pages = {}, 
+year = {2015}, 
+abstract = {}, 
+keywords = {Experiencer; Subjective; Evaluative; Degree; Copula}}
+
+
 @Incollection{Umbach2020Evaluative,
 author = {Umbach, Carla}, 
 title = {Evaluative Predicates}, 
