--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@InBook{	  koizumi1993mood,
+  address	= {Chicago},
+  author	= {Koizumi, Masatoshi},
+  booktitle	= {Japanese/Korean Linguistics, Vol. 2},
+  editor	= {Clancy, Patricia M.},
+  pages		= {409-428},
+  publisher	= {CSLI Publications},
+  title		= {Mood Phrase and Adjuncts},
+  year		= {1993}
+}
+
+@Book{		  clancy1993japanese,
+  address	= {Chicago},
+  editor	= {Clancy, Patricia M.},
+  publisher	= {CSLI Publications},
+  title		= {Japanese/Korean Linguistics, Vol. 2},
+  year		= {1993}
+}
+
 @Book{		  rizzi1982issues,
   author	= {Rizzi, Luigi},
   pages		= {188},
