--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@Article{	  abeille2005conjoints,
+  author	= {Abeill{\'e}, Anne},
+  journal	= {Langages},
+  number	= {4},
+  pages		= {42},
+  title		= {Les syntagmes conjoints et leurs fonctions syntaxiques},
+  volume	= {160},
+  year		= {2005}
+}
+
+@Article{	  zwicky1985heads,
+  author	= {Zwicky, Arnold M.},
+  journal	= {Journal of Linguistics},
+  number	= {1},
+  pages		= {1--29},
+  title		= {Heads},
+  volume	= {21},
+  year		= {1985}
+}
+
+@InBook{	  abeillechaves2021coordination,
+  address	= {Berlin},
+  author	= {Abeill{\'e}, Anne and Chaves, Rui P.},
+  booktitle	= {Head-Driven PhraseStructure Grammar: The handbook},
+  editor	= {M{\"u}ller, Stefan and Abeill{\'e}, Anne and Borsley,
+		  Robert D. and Koening, Jean-Pierre},
+  publisher	= {Language Science Press},
+  title		= {Coordination},
+  year		= {2021}
+}
+
+@InBook{	  ladyman2021structural,
+  author	= {Ladyman, James},
+  booktitle	= {The Stanford Encyclopedia of Philosophy},
+  editor	= {Edward, N. Zalta},
+  publisher	= {Metaphysics Research Lab, Stanford University},
+  title		= {Structural realism},
+  year		= {2021}
+}
+
 @InBook{	  koizumi1993mood,
   address	= {Chicago},
   author	= {Koizumi, Masatoshi},
