--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  colina2019phonology,
+  editor	= {Colina, Sonia and Mart{\'i}nez-Gil, Fernando},
+  pages		= {526},
+  publisher	= {Routledge Spanish Language Handbooks},
+  title		= {The Routledge Handbook of Spanish Phonology},
+  year		= {2019}
+}
+
 @Article{	  abeille2005conjoints,
   author	= {Abeill{\'e}, Anne},
   journal	= {Langages},
