--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  nakajima2006adverbial,
+  author	= {Nakajima, Heizo},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {674--684},
+  title		= {Adverbial Cognate Objects},
+  volume	= {37},
+  year		= {2006}
+}
+
 @Book{		  colina2019phonology,
   editor	= {Colina, Sonia and Mart{\'i}nez-Gil, Fernando},
   pages		= {526},
