--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  rezac2006inversion,
+  author	= {Rezac, Milan},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {685--697},
+  title		= {The Interaction of Th/Ex and Locative Inversion},
+  volume	= {37},
+  year		= {2006}
+}
+
 @Article{	  nakajima2006adverbial,
   author	= {Nakajima, Heizo},
   journal	= {Linguistic Inquiry},
