--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Book{		  alonso-ovalle2015epistemic,
+  author	= {Alonso-Ovalle, Luis and Men{\'e}ndez-Benito, Paula},
+  pages		= {309},
+  publisher	= {Oxford University Press, USA},
+  title		= {Epistemic Indefinites},
+  year		= {2015}
+}
+
+@Book{		  dalessandro2017verbal,
+  editor	= {D'Alessandro, Roberta and Franco, Irene and Gallego,
+		  {\'A}ngel J.},
+  pages		= {352},
+  publisher	= {Oxford University Press},
+  title		= {The Verbal Domain},
+  year		= {2017}
+}
+
 @Article{	  rezac2006inversion,
   author	= {Rezac, Milan},
   journal	= {Linguistic Inquiry},
