--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  umbach2021wiecomo,
+  author	= {Umbach, Carla and Hinterwimmer, Stefan and Gust, Helmar},
+  journal	= {Natural Language & Linguistic Theory},
+  title		= {German wie-complements},
+  year		= {2021}
+}
+
 @Book{		  alonso-ovalle2015epistemic,
   author	= {Alonso-Ovalle, Luis and Men{\'e}ndez-Benito, Paula},
   pages		= {309},
