--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,7 +1,7 @@
 
 @Article{	  umbach2021wiecomo,
   author	= {Umbach, Carla and Hinterwimmer, Stefan and Gust, Helmar},
-  journal	= {Natural Language & Linguistic Theory},
+  journal	= {Natural Language \& Linguistic Theory},
   title		= {German wie-complements},
   year		= {2021}
 }
