--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Article{	  moltmann2021cases,
+  author	= {Moltmann, Friederike},
+  journal	= {Linguistics and Philosophy},
+  number	= {1},
+  pages		= {153--193},
+  title		= {Situations, alternatives, and the semantics of `cases'},
+  volume	= {44},
+  year		= {2021}
+}
+
+@Article{	  koev2021parentheticality,
+  author	= {Koev, Todor},
+  journal	= {Linguistics and Philosophy},
+  number	= {1},
+  pages		= {113--140},
+  title		= {Parentheticality, assertion strength, and polarity},
+  volume	= {44},
+  year		= {2021}
+}
+
+@Article{	  enguehard2021connectedness,
+  author	= {Enguehard, {\'E}mile and Chemla, Emmanuel},
+  journal	= {Linguistics and Philosophy},
+  number	= {1},
+  pages		= {79--112},
+  title		= {Connectedness as a constraint on exhaustification},
+  volume	= {44},
+  year		= {2021}
+}
+
 @Article{	  umbach2021wiecomo,
   author	= {Umbach, Carla and Hinterwimmer, Stefan and Gust, Helmar},
   journal	= {Natural Language \& Linguistic Theory},
