--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,57 @@
 
+@Article{	  flaherty2021homesign,
+  author	= {Flaherty, Molly and Hunsicker, Dea and Goldin-Meadow,
+		  Susan},
+  journal	= {Cognition},
+  title		= {Structural biases that children bring to language
+		  learning: A cross-cultural look at gestural input to
+		  homesign},
+  volume	= {211},
+  year		= {2021}
+}
+
+@Book{		  clark2010computational,
+  address	= {Chichester, West Sussex; Malden, MA},
+  editor	= {Clark, Alexander and Fox, Chris and Lappin, Shalom},
+  pages		= {775},
+  publisher	= {Wiley-Blackwell},
+  title		= {The handbook of computational linguistics and natural
+		  language processing},
+  year		= {2010}
+}
+
+@Book{		  huang2001speech,
+  address	= {Upper Saddle River, NJ},
+  author	= {Huang, Xuedong and Acero, Alejandro and Hon, Hsiao-Wuen},
+  pages		= {980},
+  publisher	= {Prentice Hall PTR},
+  title		= {Spoken language processing: a guide to theory, algorithm,
+		  and system development},
+  year		= {2001}
+}
+
+@Book{		  jelinek1997speech,
+  address	= {Cambridge, Mass.},
+  author	= {Jelinek, Frederick},
+  pages		= {283},
+  publisher	= {MIT Press},
+  title		= {Statistical methods for speech recognition},
+  volume	= {Language, speech, and communication},
+  year		= {1997}
+}
+
+@Book{		  jurafsky2009speech,
+  address	= {Upper Saddle River, N.J.},
+  author	= {Jurafsky, Dan and Martin, James H.},
+  pages		= {988},
+  publisher	= {Pearson Prentice Hall},
+  title		= {Speech and language processing: an introduction to natural
+		  language processing, computational linguistics, and speech
+		  recognition},
+  volume	= {Prentice Hall series in artificial intelligence},
+  year		= {2009}
+}
+
 @Article{	  moltmann2021cases,
   author	= {Moltmann, Friederike},
   journal	= {Linguistics and Philosophy},
